[package]
name = "chat-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
futures = "0.3.26"
libp2p = { version = "0.50.0", features = ["tokio", "mplex", "tcp", "noise", "floodsub", "mdns", "macros"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
